--- a/tnp/templates/base.html
+++ b/tnp/templates/base.html
@@ -49,7 +49,9 @@
             
         {% load consent_extras %}
         {% if request.user|is_coordinator %}
-            {% include 'coordinator_tabs.html' %} 
+            {% include 'coordinator_tabs.html' %}
+        {% else %}
+            <div class="container"> <div class="section"> </div> </div>
         {% endif %}
           
         {% block body_block %}{% endblock %}
