change password page UI improvements

--- a/tnp/templates/consent/change_password.html
+++ b/tnp/templates/consent/change_password.html
@@ -3,7 +3,6 @@
 {% block title %} Change Password {% endblock %}
 
 {% block custom_css %}
-	<link type="text/css" rel="stylesheet" href="/static/css/datepicker.css" media="screen,projection" />
 	<link type="text/css" rel="stylesheet" href="/static/css/form.css" media="screen,projection" />
 {% endblock %}
 
@@ -11,34 +10,54 @@
 {% block body_block %} 
 	<div id="content" style="min-height: calc(100vh - 120px);">
 		<div class="container">
-			<div class="section" id="form_errors"> 
-				{% if messages %}
-  				<ul class="collection red-text">
-    				{% for message in messages %}
-							<li class="collection-item">{{ message }} </li>
-    					{% endfor %}
-  							</ul>
-								{% endif %}
-			</div>
+			<div class="row">
+				<div class="col s12 m8 offset-m2">
+					{% if form.is_bound %}
+						<ul class="collection red-text">
+							{% for field in form %}
+		    				{% for error in field.errors %}
+									<li class="collection-item"> {{ error }} </li>
+		    				{% endfor %}
+							{% endfor %}
+	    			</ul>
+	    		{% endif %}
 
-				<div class="row">
-					<form method="post" id="create_account_form" enctype="multipart/form-data">
-						{% csrf_token %}
-						<div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
-	                    	<div class="card-content grey darken-2 grey-text text-lighten-5 z-depth-2">
-	                      		<span class="card-title"> Preliminary Details </span>
-	                    	</div>
+          <div class="card z-depth-4">
+          	<div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
+              <span class="card-title">Change Password</span>
+            </div>
 
-	                    	<div class="section"> </div>
-							  {{ form }}
+            <div class="card-content grey lighten-5">
+							<form method="post" id="change_password_form" enctype="multipart/form-data">								
+								{% csrf_token %}
+								
+								<div class="row">
+									<div class="col s12">
+										<p> Your password must contain at least 8 characters. </p>
+										<p> Your password can't be entirely numeric. </p>
+									</div>
+								</div>
+
+								{% for field in form %}
+									<div class="row">
+                    <div class="input-field col s12">
+                    	<label for="{{ field.id_for_label }}" class="grey-text text-darken-2"> {{ field.label }} </label>
+                      {{ field }}
+                    </div>
+                  </div>
+								{% endfor %}
+								
+								<center>
+                  <button class="waves-effect waves-light btn-large grey darken-2 grey-text text-lighten-5 hoverable" id="change_password_button" type="submit"> Change Password </button>
+                </center>
+                
+							</form>
 						</div>
 
-						<center>
-		                    <button class="waves-effect waves-light btn-large grey darken-2 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit"> Change Password </button>
-		                </center>
-					</form>
+					</div>
+
 				</div>
-			
+			</div>
 		</div>
 	</div>
 {% endblock %}
@@ -49,5 +68,5 @@
 
 
 {% block custom_js %}
-	<script type="text/javascript" src="/static/js/consent/create_account.js"></script>
+
 {% endblock %}
