--- a/tnp/static/css/consent/profile.css
+++ b/tnp/static/css/consent/profile.css
@@ -3,12 +3,20 @@
   overflow: auto;
 }
 
-.board {
-  height: 180px;
+.board-exam {
+  height: 290px;
   overflow: auto;
 }
 
 .cgpa {
   height: 530px;
   overflow: auto;
+}
+
+.board-exam-fields {
+	width:35%;
+}
+
+.board-exam-content {
+	width:65%;
 }
