splitting js files common between edit and create profile pages

--- a/tnp/templates/consent/create_account.html
+++ b/tnp/templates/consent/create_account.html
@@ -381,5 +381,6 @@
 
 
 {% block custom_js %}
+	<script type="text/javascript" src="/static/js/consent/common.js"></script>
 	<script type="text/javascript" src="/static/js/consent/create_account.js"></script>
 {% endblock %}
